--- a/Restoran-main/public/template/css/style.css
+++ b/Restoran-main/public/template/css/style.css
@@ -1,12 +1,12 @@
 /********** Template CSS **********/
 :root {
-    --primary: #FEA116;
-    --light: #F1F8FF;
-    --dark: #0F172B;
+    --primary: #fea116;
+    --light: #f1f8ff;
+    --dark: #0f172b;
 }
 
 .ff-secondary {
-    font-family: 'Pacifico', cursive;
+    font-family: "Pacifico", cursive;
 }
 
 .fw-medium {
@@ -25,33 +25,31 @@
     z-index: 99;
 }
 
-
 /*** Spinner ***/
 #spinner {
     opacity: 0;
     visibility: hidden;
-    transition: opacity .5s ease-out, visibility 0s linear .5s;
+    transition: opacity 0.5s ease-out, visibility 0s linear 0.5s;
     z-index: 99999;
 }
 
 #spinner.show {
-    transition: opacity .5s ease-out, visibility 0s linear 0s;
+    transition: opacity 0.5s ease-out, visibility 0s linear 0s;
     visibility: visible;
     opacity: 1;
 }
 
-
 /*** Button ***/
 .btn {
-    font-family: 'Nunito', sans-serif;
+    font-family: "Nunito", sans-serif;
     font-weight: 500;
     text-transform: uppercase;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .btn.btn-primary,
 .btn.btn-secondary {
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .btn-square {
@@ -80,7 +78,6 @@
     border-radius: 2px;
 }
 
-
 /*** Navbar ***/
 .navbar-dark .navbar-nav .nav-link {
     position: relative;
@@ -91,7 +88,7 @@
     text-transform: uppercase;
     font-weight: 500;
     outline: none;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .sticky-top.navbar-dark .navbar-nav .nav-link {
@@ -105,7 +102,7 @@
 
 .navbar-dark .navbar-brand img {
     max-height: 60px;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .sticky-top.navbar-dark .navbar-brand img {
@@ -119,7 +116,7 @@
 
     .navbar-dark .navbar-collapse {
         margin-top: 15px;
-        border-top: 1px solid rgba(255, 255, 255, .1)
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
     }
 
     .navbar-dark .navbar-nav .nav-link,
@@ -142,26 +139,25 @@
         z-index: 999;
         background: transparent !important;
     }
-    
+
     .sticky-top.navbar-dark {
         position: fixed;
         background: var(--dark) !important;
     }
 }
 
-
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/bg-hero.jpg);
+    background: linear-gradient(rgba(15, 23, 43, 0.9), rgba(15, 23, 43, 0.9)),
+        url(../img/bg-hero.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.breadcrumb-item + .breadcrumb-item::before {
-    color: rgba(255, 255, 255, .5);
+.breadcrumb-item+.breadcrumb-item::before {
+    color: rgba(255, 255, 255, 0.5);
 }
-
 
 /*** Section Title ***/
 .section-title {
@@ -196,11 +192,10 @@
     display: none;
 }
 
-
 /*** Service ***/
 .service-item {
-    box-shadow: 0 0 45px rgba(0, 0, 0, .08);
-    transition: .5s;
+    box-shadow: 0 0 45px rgba(0, 0, 0, 0.08);
+    transition: 0.5s;
 }
 
 .service-item:hover {
@@ -208,26 +203,25 @@
 }
 
 .service-item * {
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .service-item:hover * {
     color: var(--light) !important;
 }
 
-
 /*** Food Menu ***/
 .nav-pills .nav-item .active {
     border-bottom: 2px solid var(--primary);
 }
-
 
 /*** Youtube Video ***/
 .video {
     position: relative;
     height: 100%;
     min-height: 500px;
-    background: linear-gradient(rgba(15, 23, 43, .1), rgba(15, 23, 43, .1)), url(../img/video.jpg);
+    background: linear-gradient(rgba(15, 23, 43, 0.1), rgba(15, 23, 43, 0.1)),
+        url(../img/video.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -334,21 +328,20 @@
     z-index: 999;
     font-size: 30px;
     font-weight: normal;
-    color: #FFFFFF;
+    color: #ffffff;
     background: #000000;
     opacity: 1;
 }
 
-
 /*** Team ***/
 .team-item {
-    box-shadow: 0 0 45px rgba(0, 0, 0, .08);
+    box-shadow: 0 0 45px rgba(0, 0, 0, 0.08);
     height: calc(100% - 38px);
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .team-item img {
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .team-item:hover img {
@@ -363,11 +356,10 @@
     border-radius: 38px 38px 0 0;
 }
 
-
 /*** Testimonial ***/
 .testimonial-carousel .owl-item .testimonial-item,
 .testimonial-carousel .owl-item.center .testimonial-item * {
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .testimonial-carousel .owl-item.center .testimonial-item {
@@ -392,16 +384,15 @@
     margin: 0 5px;
     width: 15px;
     height: 15px;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #cccccc;
     border-radius: 15px;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .testimonial-carousel .owl-dot.active {
     background: var(--primary);
     border-color: var(--primary);
 }
-
 
 /*** Footer ***/
 .footer .btn.btn-social {
@@ -412,9 +403,9 @@
     align-items: center;
     justify-content: center;
     color: var(--light);
-    border: 1px solid #FFFFFF;
+    border: 1px solid #ffffff;
     border-radius: 35px;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .footer .btn.btn-social:hover {
@@ -426,11 +417,11 @@
     margin-bottom: 5px;
     padding: 0;
     text-align: left;
-    color: #FFFFFF;
+    color: #ffffff;
     font-size: 15px;
     font-weight: normal;
     text-transform: capitalize;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .footer .btn.btn-link::before {
@@ -449,7 +440,7 @@
 .footer .copyright {
     padding: 25px 0;
     font-size: 15px;
-    border-top: 1px solid rgba(256, 256, 256, .1);
+    border-top: 1px solid rgba(256, 256, 256, 0.1);
 }
 
 .footer .copyright a {
@@ -459,11 +450,566 @@
 .footer .footer-menu a {
     margin-right: 15px;
     padding-right: 15px;
-    border-right: 1px solid rgba(255, 255, 255, .1);
+    border-right: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .footer .footer-menu a:last-child {
     margin-right: 0;
     padding-right: 0;
     border-right: none;
+}
+
+.kategori::-webkit-scrollbar {
+    display: none;
+}
+
+.rounded-5 {
+    border-radius: 15px;
+}
+
+.ratings i {
+    color: #cecece;
+}
+
+.rating-color {
+    color: #fbc634 !important;
+}
+
+.searching {
+    position: relative;
+}
+
+.searching .fa-search {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: #9ca3af;
+}
+
+.searching span {
+    position: absolute;
+    right: 17px;
+    top: 13px;
+    padding: 2px;
+    border-left: 1px solid #d1d5db;
+}
+
+.left-pan {
+    padding-left: 7px;
+}
+
+.left-pan i {
+    padding-left: 10px;
+}
+
+.form-inputs {
+    height: 55px;
+    text-indent: 33px;
+    border-radius: 10px;
+}
+
+.form-inputs:focus {
+    box-shadow: none;
+    border: none;
+}
+
+/* Tombol Favorit di kanan atas gambar produk */
+.favorite-btn {
+    font-size: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.favorite-btn:hover {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.favorite-btn i {
+    color: #ff6347;
+    /* Warna merah untuk ikon hati */
+}
+
+/* Warna hati favorit (terisi) */
+.favorite-btn .fa-heart {
+    color: #ff6347;
+}
+
+/* Warna hati belum favorit (kosong) */
+.favorite-btn .fa-heart-o {
+    color: #ccc;
+}
+
+.searching {
+    position: relative;
+}
+
+.form-inputs {
+    padding-left: 2.5rem;
+    /* Jarak untuk ikon search di kiri */
+    padding-right: 2.5rem;
+    /* Jarak untuk ikon microphone di kanan */
+    height: 55px;
+    text-indent: 33px;
+    border-radius: 10px;
+}
+
+.searching .fa-search,
+.searching .fa-microphone {
+    color: #6c757d;
+    /* Warna ikon, sesuaikan sesuai kebutuhan */
+}
+
+.form-inputs:focus {
+
+    box-shadow: none;
+    border: none;
+}
+
+.b {
+    border-left: 1px solid rgba(141, 141, 141, 0.6);
+
+}
+
+.c {
+    margin-left: 14px;
+}
+
+.searching {
+
+    position: relative;
+}
+
+.searching .fa-search {
+
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: #9ca3af;
+
+}
+
+.searching span {
+
+    position: absolute;
+    right: 17px;
+    top: 13px;
+    padding: 2px;
+    border-left: 1px solid #d1d5db;
+
+}
+
+.left-pan {
+    padding-left: 7px;
+}
+
+.left-pan i {
+
+    padding-left: 10px;
+}
+
+.form-inputs {
+
+    height: 55px;
+    text-indent: 33px;
+    border-radius: 10px;
+}
+
+.form-inputs:focus {
+
+    box-shadow: none;
+    border: none;
+}
+
+.rounded-5 {
+    border-radius: 20px;
+}
+
+.searching {
+    position: relative;
+}
+
+.form-inputs {
+    padding-left: 2.5rem;
+    /* Jarak untuk ikon search di kiri */
+    padding-right: 2.5rem;
+    /* Jarak untuk ikon microphone di kanan */
+    height: 55px;
+    text-indent: 33px;
+    border-radius: 10px;
+}
+
+.searching .fa-search,
+.searching .fa-microphone {
+    color: #6c757d;
+    /* Warna ikon, sesuaikan sesuai kebutuhan */
+}
+
+.form-inputs:focus {
+
+    box-shadow: none;
+    border: none;
+}
+
+.b {
+    border-left: 1px solid rgba(141, 141, 141, 0.6);
+
+}
+
+.c {
+    margin-left: 14px;
+}
+
+.searching {
+
+    position: relative;
+}
+
+.searching .fa-search {
+
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: #9ca3af;
+
+}
+
+.searching span {
+
+    position: absolute;
+    right: 17px;
+    top: 13px;
+    padding: 2px;
+    border-left: 1px solid #d1d5db;
+
+}
+
+.left-pan {
+    padding-left: 7px;
+}
+
+.left-pan i {
+
+    padding-left: 10px;
+}
+
+.form-inputs {
+
+    height: 55px;
+    text-indent: 33px;
+    border-radius: 10px;
+}
+
+.form-inputs:focus {
+
+    box-shadow: none;
+    border: none;
+}
+
+.ratings i {
+
+    color: #cecece;
+}
+
+.rating-color {
+    color: #fbc634 !important;
+}
+
+
+/* Tampilan card */
+.profile-card {
+    background-color: #f8f9fa;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    margin: 10px;
+}
+
+.profile-card:hover {
+    transform: translateY(-5px);
+}
+
+/* Gambar profil kotak */
+.profile-img-wrapper {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 15px;
+}
+
+.profile-img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    border: none;
+    object-fit: cover;
+}
+
+/* Nama pengguna */
+.username {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #333;
+}
+
+/* Teks keterangan */
+.card-text {
+    font-size: 1rem;
+    color: #555;
+    margin-top: 5px;
+}
+
+.ul li {
+    border: none;
+    outline: none;
+}
+
+.list-group {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.list-group-item {
+    background-color: transparent;
+    border: none;
+    padding: 5px 0;
+}
+
+.kategori::-webkit-scrollbar {
+    display: none;
+}
+
+
+.rounded-5 {
+    border-radius: 15px
+}
+
+.ratings i {
+
+    color: #cecece;
+}
+
+.rating-color {
+    color: #fbc634 !important;
+}
+
+.searching {
+
+    position: relative;
+}
+
+.searching .fa-search {
+
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: #9ca3af;
+
+}
+
+.searching span {
+
+    position: absolute;
+    right: 17px;
+    top: 13px;
+    padding: 2px;
+    border-left: 1px solid #d1d5db;
+
+}
+
+.left-pan {
+    padding-left: 7px;
+}
+
+.left-pan i {
+
+    padding-left: 10px;
+}
+
+.form-inputs {
+
+    height: 55px;
+    text-indent: 33px;
+    border-radius: 10px;
+}
+
+.form-inputs:focus {
+
+    box-shadow: none;
+    border: none;
+}
+
+.profile-card {
+    border-radius: 50%;
+    overflow: hidden;
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    position: relative;
+}
+
+.profile-img-wrapper {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+.profile-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.username {
+    text-align: center;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.red-heart path {
+    fill: #FF4545;
+}
+
+.list-group {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.list-group-item {
+    background-color: transparent;
+    border: none;
+    padding: 8px 0;
+}
+
+.list-group-item button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+}
+
+.list-group-item svg {
+    fill: black;
+    transition: fill 0.3s ease;
+}
+
+.list-group-item button:focus svg path:nth-child(2) {
+    fill: black;
+    color: black
+}
+
+.list-group-item button:focus {
+    outline: none;
+}
+
+@media (max-width: 360px) {
+    .nav-item {
+        width: 50%;
+    }
+
+
+}
+
+
+.toko-section {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 1;
+}
+
+.ratings i {
+
+    color: #cecece;
+}
+
+.rating-color {
+    color: #fbc634 !important;
+}
+
+.searching {
+    position: relative;
+}
+
+.form-inputs {
+    padding-left: 2.5rem;
+    /* Jarak untuk ikon search di kiri */
+    padding-right: 2.5rem;
+    /* Jarak untuk ikon microphone di kanan */
+    height: 55px;
+    text-indent: 33px;
+    border-radius: 10px;
+}
+
+.searching .fa-search,
+.searching .fa-microphone {
+    color: #6c757d;
+    /* Warna ikon, sesuaikan sesuai kebutuhan */
+}
+
+.form-inputs:focus {
+
+    box-shadow: none;
+    border: none;
+}
+
+.b {
+    border-left: 1px solid rgba(141, 141, 141, 0.6);
+
+}
+
+.c {
+    margin-left: 14px;
+}
+
+.searching {
+
+    position: relative;
+}
+
+.searching .fa-search {
+
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: #9ca3af;
+
+}
+
+.searching span {
+
+    position: absolute;
+    right: 17px;
+    top: 13px;
+    padding: 2px;
+    border-left: 1px solid #d1d5db;
+
+}
+
+.left-pan {
+    padding-left: 7px;
+}
+
+.left-pan i {
+
+    padding-left: 10px;
+}
+
+.form-inputs {
+
+    height: 55px;
+    text-indent: 33px;
+    border-radius: 10px;
+}
+
+.form-inputs:focus {
+
+    box-shadow: none;
+    border: none;
 }
